# challenger-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: rust-checks.yaml  test.yaml
benches/: challenger_benchmark.rs
src/: gamestate.rs  lib.rs  main.rs  position.rs  uci.rs
