[package]
name = "challenger-rs"
version = "0.1.0"
authors = ["folksgl <Gfolks14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "challenger_benchmark"
harness = false
